--- a/PRATICANDO/strings.ipynb
+++ b/PRATICANDO/strings.ipynb
@@ -207,28 +207,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "78195f7c",
-   "metadata": {},
-   "source": [
-    "# 10.Peça uma frase e troque todas as ocorrências da letra 'e' por '3'.\n",
-    "\n",
-    "frase = input ('Digite uma frase')\n",
-    "\n",
-    "novo_frase = frase.replace('e' , 'o')\n",
-    "\n",
-    "print(novo_frase)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8349a2bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2f3d98d5",
@@ -292,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4445b5b1",
    "metadata": {},
    "outputs": [
@@ -311,6 +289,7 @@
     "idade = input ('Informe a sua idade ')\n",
     "proffissão = input ('informe a sua profissão')\n",
     "\n",
+    " \n",
     "print(f'{Nome} tem {idade}anos e trabalha {proffissão}')\n"
    ]
   },
@@ -329,11 +308,99 @@
     }
    ],
    "source": [
-    "# Peça uma frase com espaços duplicados e remova os espaços desnecessários.\n",
+    "#13. Peça uma frase com espaços duplicados e remova os espaços desnecessários.\n",
     "frase = input('Digite uma frase ')\n",
     "\n",
     "frase_sem_espacos = ' ' .join(frase.split())\n",
     "print ( frase_sem_espacos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "db01b442",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de paavaras nesta frase 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 14. Peça uma frase e conte quantas palavras ela contém.\n",
+    "\n",
+    "frase = input ('digite uma frase ')\n",
+    "\n",
+    "palavras = frase.split()\n",
+    "\n",
+    "quantidade = len(palavras)\n",
+    "\n",
+    "print(f'Numero de paavaras nesta frase {quantidade}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "87738984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cristiano 1979Xeg\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15 .Crie uma senha a partir do nome do usuário + ano de nascimento + 3 caracteres aleatórios\n",
+    "\n",
+    "import string\n",
+    "import random\n",
+    "\n",
+    "def gerar_senha (nome,ano_nascimento):\n",
+    "    carac_aleatorios = ''.join(random.choices(string.ascii_letters + string.digits,k=3))\n",
+    "    senha = f\"{nome} {ano_nascimento}{carac_aleatorios}\"\n",
+    "    return senha\n",
+    "\n",
+    "nome_usuario = \"Cristiano\"\n",
+    "ano_nascimento_usuario = '1979' \n",
+    "print(gerar_senha(nome_usuario,ano_nascimento_usuario))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e5cf586d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qzuipo ê jodsîwfm!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16.Faça um programa que substitua cada letra da string por sua próxima letra no alfabeto.\n",
+    "def substituir_proxima_letra(texto):\n",
+    "    resultado = ''\n",
+    "    for letra in texto:\n",
+    "        if letra.isalpha():  # Verifica se é uma letra\n",
+    "            nova_letra = chr(ord(letra) + 1) if letra.lower() != 'z' else 'a'\n",
+    "            resultado += nova_letra\n",
+    "        else:\n",
+    "            resultado += letra  # Mantém caracteres que não são letras inalterados\n",
+    "    return resultado\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "texto = \"python é incrível!\"\n",
+    "print(substituir_proxima_letra(texto))"
    ]
   }
  ],
